edit_block bottom spacing fixed, instructions are gone from top of page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,6 +107,8 @@ body {
 #display_workflow{
 	text-align:center; 
 	padding-bottom: 10px;
+	display: block;
+	height: 200px;
 }
 .error {
     color: red;
@@ -394,7 +396,7 @@ border-radius:10px;
 
 .right_column textarea{
 	width: 60%;
-	height: 300px;
+	height: 200px;
 }
 #serial {
 	margin:  0 150px 0 120px;
